# libwordexp

./: CMakeLists.txt  README.md  reallocarray.c  wordexp.c  wordexp.h
.github/workflows/: ci.yml
